# Server

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN.md
app/: main.cpp
benchmark/: benchmark.cpp
docs/: M1-SSE实现文档.md  M2-WebSocket实现文档.md  server_flow.md  个人笔记.md  应用层-AI-Agent-路线图与设计.md  路线图.md  通用网络库-路线图与设计.md  阶段1-timer设计.md
include/: acceptor.hpp  buffer.hpp  callbacks.hpp  channel.hpp  curthread.hpp  epollpoller.hpp  eventloop.hpp  inetaddress.hpp  logger.hpp  noncopyable.hpp  poller.hpp  socket.hpp  tcpconnection.hpp  timestamp.hpp
include/base/: buffer.hpp  currentthread.hpp  logger.hpp  noncopyable.hpp  thread.hpp  timestamp.hpp
include/net/: acceptor.hpp  callbacks.hpp  channel.hpp  epollpoller.hpp  eventloop.hpp  eventloopthread.hpp  eventloopthreadpool.hpp  inetaddress.hpp  poller.hpp  socket.hpp  tcpconnection.hpp  tcpserver.hpp
lib/: README.md
lib/base/private/: buffer.cpp  currentthread.cpp  logger.cpp  thread.cpp  timestamp.cpp
lib/base/public/: base64.hpp  buffer.hpp  currentthread.hpp  logger.hpp  sha1.hpp
lib/http/private/: httpcontext.cpp  httprequest.cpp  httpresponse.cpp  httpserver.cpp
lib/http/public/: httpcontext.hpp  httprequest.hpp  httpresponse.hpp  httpserver.hpp
lib/net/private/: acceptor.cpp  channel.cpp  epollpoller.cpp  eventloop.cpp  eventloopthread.cpp  eventloopthreadpool.cpp  inetaddress.cpp  poller.cpp  socket.cpp  tcpconnection.cpp  tcpserver.cpp  timer.cpp  timerqueue.cpp  timingwheel.cpp  udpserver.cpp
lib/net/public/: acceptor.hpp  callbacks.hpp  channel.hpp  epollpoller.hpp  eventloop.hpp  eventloopthread.hpp  eventloopthreadpool.hpp  inetaddress.hpp  poller.hpp  socket.hpp  tcpconnection.hpp  tcpserver.hpp  timer.hpp  timerqueue.hpp  timingwheel.hpp  udpserver.hpp
lib/protocol/http/private/: httpcontext.cpp  httprequest.cpp  httpresponse.cpp  httpserver.cpp
lib/protocol/http/public/: httpcontext.hpp  httprequest.hpp  httpresponse.hpp  httpserver.hpp
lib/protocol/ws/private/: wsconnection.cpp  wscontext.cpp  wsserver.cpp
lib/protocol/ws/public/: wsconnection.hpp  wscontext.hpp  wsframe.hpp  wsserver.hpp
lib/transport/base/private/: buffer.cpp  currentthread.cpp  logger.cpp  thread.cpp  timestamp.cpp
lib/transport/base/public/: base64.hpp  buffer.hpp  currentthread.hpp  logger.hpp  noncopyable.hpp  sha1.hpp  thread.hpp  timestamp.hpp
lib/transport/net/private/: acceptor.cpp  channel.cpp  epollpoller.cpp  eventloop.cpp  eventloopthread.cpp  eventloopthreadpool.cpp  inetaddress.cpp  poller.cpp  socket.cpp  tcpconnection.cpp  tcpserver.cpp  timer.cpp  timerqueue.cpp  timingwheel.cpp  udpserver.cpp
lib/transport/net/public/: acceptor.hpp  callbacks.hpp  channel.hpp  epollpoller.hpp  eventloop.hpp  eventloopthread.hpp  eventloopthreadpool.hpp  inetaddress.hpp  poller.hpp  socket.hpp  tcpconnection.hpp  tcpserver.hpp  timer.hpp  timerqueue.hpp  timingwheel.hpp  udpserver.hpp
lib/ws/private/: wsconnection.cpp  wscontext.cpp  wsserver.cpp
lib/ws/public/: wsconnection.hpp  wscontext.hpp  wsframe.hpp  wsserver.hpp
modules/base/include/base/: buffer.hpp  currentthread.hpp  logger.hpp  noncopyable.hpp  thread.hpp  timestamp.hpp
modules/base/src/: buffer.cpp  currentthread.cpp  logger.cpp  thread.cpp  timestamp.cpp
modules/http/include/http/: httpcontext.hpp  httprequest.hpp  httpresponse.hpp  httpserver.hpp
modules/http/src/: httpcontext.cpp  httprequest.cpp  httpresponse.cpp  httpserver.cpp
modules/net/include/net/: acceptor.hpp  callbacks.hpp  channel.hpp  epollpoller.hpp  eventloop.hpp  eventloopthread.hpp  eventloopthreadpool.hpp  inetaddress.hpp  poller.hpp  socket.hpp  tcpconnection.hpp  tcpserver.hpp  timer.hpp  timerqueue.hpp  timingwheel.hpp  udpserver.hpp
modules/net/src/: acceptor.cpp  channel.cpp  epollpoller.cpp  eventloop.cpp  eventloopthread.cpp  eventloopthreadpool.cpp  inetaddress.cpp  poller.cpp  socket.cpp  tcpconnection.cpp  tcpserver.cpp  timer.cpp  timerqueue.cpp  timingwheel.cpp  udpserver.cpp
src/: acceptor.cpp  buffer.cpp  channel.cpp  curthread.cpp  epollpoller.cpp  eventloop.cpp  inetaddress.cpp  logger.cpp  main.cpp  poller.cpp  socket.cpp  tcpconnection.cpp  timestamp.cpp
src/base/: buffer.cpp  currentthread.cpp  logger.cpp  thread.cpp  timestamp.cpp
src/net/: acceptor.cpp  channel.cpp  epollpoller.cpp  eventloop.cpp  eventloopthread.cpp  eventloopthreadpool.cpp  inetaddress.cpp  poller.cpp  socket.cpp  tcpconnection.cpp  tcpserver.cpp  timer.cpp  timerqueue.cpp  timingwheel.cpp  udpserver.cpp
test/: http_llm_test.cpp  http_server_test.cpp  http_test.cpp  timer_test.cpp  udp_echo_test.cpp  ws_server_test.cpp
